ch09/ex14/ingress02-service.yml
apiVersion: v1 # 서비스의 경우
kind: Service
metadata: # 다른 오브젝트와 구분하는 식별자
  name: ingress-service-test02
spec: # 앞으로 생성할 서비스의 상태를 지정
  selector: 
    app.kubernetes.io/name: web-deploy02
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
